mpm_web_api/bin/Release/netcoreapp2.2/YML/api-ifactory-mw-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-ifactory-mw
  labels:
    app: api-ifactory-mw
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-ifactory-mw
  template:
    metadata:
      labels:
        app: api-ifactory-mw
    spec:   
      containers:
      - name: api-ifactory-mw
        image: harbor.arfa.wise-paas.com/sunsx/api-ifactory-mw:latest
        resources:
          limits:
            memory: "200Mi"
            cpu: "100m"
            ephemeral-storage: "512Mi"
          requests:
            memory: "100Mi"
            cpu: "100m"
        ports:
        - containerPort: 5000
          name: "api-ifactory-mw"
