mpm_web_api/bin/Release/netcoreapp2.2/YML/api-ifactory-mw-ingress-domain.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-ifactory-mw
spec:
  rules:
  - host: api-ifactory-mw.metalwork.eks005.en.internal
    http:
      paths:
      - backend:
          serviceName: api-ifactory-mw
          servicePort: 80
